--- a/src/app/video-shop/video-shop.component.html
+++ b/src/app/video-shop/video-shop.component.html
@@ -1,3 +1,3 @@
-<div *ngFor="let movie of movies$ | async">
-  <span>{{ movie.name }} </span>
-</div>
+<ng-container *ngFor="let movie of movies$ | async">
+  <app-movie [movie]="movie"></app-movie>
+</ng-container>
